--- a/wiki/InstallationInstructions.wiki
+++ b/wiki/InstallationInstructions.wiki
@@ -1,20 +1,20 @@
 #summary Lucene interface for SRW/SRU installation instructions.
 
-= Introduction =
+= Build Instructions=
 
 Instructions for how to build the Lucene Database interface for the SRW/SRU server.
 
-=Prerequisites=
+==Prerequisites==
   * Tomcat or some other servlet engine
   * Ant
 
-=Step 1=
+==Step 1==
 Download the latest Lucene Database interface from the SVN repository.  (Instructions for that can be found [http://code.google.com/p/oclcsrwlucene/source/checkout here].)
 
-=Step 2=
+==Step 2==
 Run "ant" to compile the code and build SRWLucene.jar.
 
-=Step 3=
+==Step 3==
 After you’ve run “ant”, you’ll find a directory named “dist” and in it you will find the SRWLucene.jar file. Copy that file to your `<tomcat>/webapps/<SRW>/WEB-INF/lib` directory.
 
 =Testing=
