Edited wiki page through web user interface.

--- a/wiki/InstallationInstructions.wiki
+++ b/wiki/InstallationInstructions.wiki
@@ -18,6 +18,8 @@ Run "ant" to compile the code and build SRWLucene.jar.
 After you’ve run “ant”, you’ll find a directory named “dist” and in it you will find the SRWLucene.jar file. If you are building a new complete SRW server, then copy the jar file from the "dist" directory and the jars (except the SRW jar!) from the "lib" directory to the web/WEB-INF/lib directory of the SRW distribution.  If you are just updating an already deployed SRW server, then copy those same files to your `<tomcat>/webapps/<SRW>/WEB-INF/lib` directory.
 
 =Testing=
+The SRWLucene package included the Lucene demo database build from their documentation.  If you'd like to test with it, edit the SRWServer.props file in the `<tomcat>/webapps/SRW/WEB-INF/classes` directory and change the path in the db.testlucene.home property.  After making that change, start (or restart) your tomcat server and the following links (changed as necessary for your installation) should work.
+
 [http://localhost:8080/SRW/search/lucenetest]
 
 [http://localhost:8080/SRW/search/lucenetest?query=local.contents=dog]
