--- a/wiki/WikiHomePage.wiki
+++ b/wiki/WikiHomePage.wiki
@@ -1,12 +1,5 @@
 #summary Project Wiki Home Page.
 
-= Introduction =
-
 [InstallationInstructions]
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[ConfigurationInstructions]
