--- a/wiki/ConfigurationInstructions.wiki
+++ b/wiki/ConfigurationInstructions.wiki
@@ -6,9 +6,9 @@ You need to let the SRW server know of the existence of your Lucene database.  Y
 
 Add these three lines to the SRWServer.props file:
 {{{
-  `db.<databaseName>.class`=ORG.oclc.SRW.Lucene.SRWLuceneDatabase.class
-  `db.<databaseName>.home=<full pathname to your Lucene database directory>`
-  `db.<databaseName>.configuration`=SRWDatabase.props
+  db.<databaseName>.class=ORG.oclc.SRW.Lucene.SRWLuceneDatabase.class
+  db.<databaseName>.home=<full pathname to your Lucene database directory>
+  db.<databaseName>.configuration=SRWDatabase.props
 }}}
 
 The `db.<databaseName>.home` property points to the directory that contains the database index directory.  This is also where SRW will expect to find any other files necessary for its operation.
